services/blog/overlays/prod/httproutes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-preview-cguertin-dev
  namespace: blog
spec:
  hostnames:
  - preview.cguertin.dev
  parentRefs:
  - name: main-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - name: blog-preview
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-active-cguertin-dev
  namespace: blog
spec:
  hostnames:
  - cguertin.dev
  parentRefs:
  - name: main-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - name: blog-active
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
