services/blog/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - cguertin.dev
    secretName: cguertin-dev-cert
  rules:
  - host: cguertin.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-active
            port: 
              name: http
