services/blog/overlays/prod/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-preview
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - preview.cguertin.dev
    secretName: preview-cguertin-dev-cert
  rules:
  - host: preview.cguertin.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-preview
            port: 
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-active
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cguertin.dev
    secretName: cguertin-dev-cert
  rules:
  - host: cguertin.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-active
            port: 
              name: http
